--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>this page is for my second repo practice</p>
     <p>hope I could make it perfectly</p>
+    <p>mama i can change my file and push it anytime separately</p>
 </body>
 </html>
